gen/websecurityscanner/v1/generator-errors.log
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
    Checking google-websecurityscanner1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/websecurityscanner/v1/lib)
error[E0423]: expected value, found struct `scan_configs::ScanConfigsActions`
    --> gen/websecurityscanner/v1/lib/src/lib.rs:1737:13
     |
1737 |             scan_configs::ScanConfigsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `scan_configs::ScanConfigsActions { /* fields */ }`?

error[E0423]: expected value, found struct `scan_runs::ScanRunsActions`
    --> gen/websecurityscanner/v1/lib/src/lib.rs:1881:17
     |
1881 |                 scan_runs::ScanRunsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `scan_runs::ScanRunsActions { /* fields */ }`?

error[E0423]: expected value, found struct `crawled_urls::CrawledUrlsActions`
    --> gen/websecurityscanner/v1/lib/src/lib.rs:2834:21
     |
2834 |                     crawled_urls::CrawledUrlsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `crawled_urls::CrawledUrlsActions { /* fields */ }`?

error[E0423]: expected value, found struct `finding_type_stats::FindingTypeStatsActions`
    --> gen/websecurityscanner/v1/lib/src/lib.rs:2838:21
     |
2838 |                     finding_type_stats::FindingTypeStatsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `finding_type_stats::FindingTypeStatsActions { /* fields */ }`?

error[E0423]: expected value, found struct `findings::FindingsActions`
    --> gen/websecurityscanner/v1/lib/src/lib.rs:2842:21
     |
2842 |                     findings::FindingsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `findings::FindingsActions { /* fields */ }`?

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-websecurityscanner1`.

To learn more, run the command again with --verbose.
